# AeroDyn

./: .gitignore
AeroAcoustics/: scriptcompile.sh  scriptonly.sh
AeroAcoustics/src/: CMakeLists.txt
AeroAcoustics/src/AA_Driver/: CMakeLists.txt  Noise_Driver.f90  Noise_Driver_Registry.txt  Noise_Driver_Subs.f90
AeroAcoustics/src/AeroAcoustics/: AeroAcoustics.f90  AeroAcoustics_IO.f90  AeroAcoustics_Registry.txt  CMakeLists.txt  Noise_Registry.txt~  Registry_tmp.5136
AeroAcoustics/src/Airfoil_Info/: AirfoilInfo_Types.f90
AeroAcoustics/src/NWTC_Library/: CMakeLists.txt
AeroAcoustics/src/Registry/: CMakeLists.txt
AeroAcoustics/test/: DriverFileNRELOffshrBsline5MW_Onshore_Test03.1.out  DriverFileNRELOffshrBsline5MW_Onshore_Test03.dvr
CertTest/: AOC_Test01.dvr  AOC_Test02.dvr  AOC_Test03.dvr  CertTest.bat  NRELOffshrBsline5MW_Onshore_Test01.1.out  NRELOffshrBsline5MW_Onshore_Test01.2.out  NRELOffshrBsline5MW_Onshore_Test01.dvr  NRELOffshrBsline5MW_Onshore_Test02.dvr  NRELOffshrBsline5MW_Onshore_Test03.dvr  PlPlotAxIndTnIndCurves_DT.m  PlotAxIndTnIndCurves_DT.m  PlotClCdCmCurves_DT.m  PlotClCdCmCurves_Hz.m  PlotResults.m  Run_Tests.bat  Test01_UAE.dvr  Test01_UAE.wtp  ccBlade_UAE.WTP.out  ccBlade_UAE.WTP2.out  ccBlade_UAE.WTP_1.out  ccBlade_UAE.dvr  ccBlade_UAE.wtp  ccBlade_UAE2.dvr  ccBlade_UAE2.wtp  ccBlade_UAE4444.dvr  ccBlade_UAE4444.wtp  ccBlade_UAE_base.dvr  ccBlade_UAE_base.wtp  skewWakeCorr.dvr  skewWakeCorr.wtp
CertTest/Airfoils/UAE_VI/: Mod_S809_Outboard.ech  cylinder.ech
CertTest/BEMT Validation/: Readme.txt
CertTest/BEMT Validation/codes/: runcodes.bat
CertTest/BEMT Validation/images/: FAST_Framework.docx  aerodyn module.docx  aerodyn_bem_an.aux  aerodyn_bem_an.nlo  aerodyn_bem_an.out  aerodyn_bem_an.tex  aerodyn_ccsr.docx  aerodyn_co.docx  aerodyn_us.docx  curved.key  swept.key
CertTest/DBEMT_Results/DBEMT_Mod=0/: NRELOffshrBsline5MW_Onshore_Test01.1.out  NRELOffshrBsline5MW_Onshore_Test01.2.out
CertTest/DBEMT_Results/DBEMT_Mod=1/: NRELOffshrBsline5MW_Onshore_Test01.1.out  NRELOffshrBsline5MW_Onshore_Test01.2.out
CertTest/NREL_Results/: AOC_Test01.1.out  AOC_Test01.2.out  AOC_Test02.1.out  AOC_Test02.2.out  AOC_Test03.1.out  AOC_Test03.2.out  NRELOffshrBsline5MW_Onshore_Test01.1.out  NRELOffshrBsline5MW_Onshore_Test01.2.out  NRELOffshrBsline5MW_Onshore_Test01.3.out  NRELOffshrBsline5MW_Onshore_Test02.1.out  NRELOffshrBsline5MW_Onshore_Test02.2.out  NRELOffshrBsline5MW_Onshore_Test02.3.out  NRELOffshrBsline5MW_Onshore_Test03.1.out  NRELOffshrBsline5MW_Onshore_Test03.2.out  NRELOffshrBsline5MW_Onshore_Test03.3.out
CertTest/Results/: Test01.1.out  Test01.AD.sum
CertTest/UA_Tests/: 05014051.dvr  05014051_UAMod2.dvr  05014061.dvr  05014061_UAMod2.dvr  C10l100AM20_s809.dvr  C10l100AM20_s809_UAMod2.dvr  C10m100AM14_LS417.dvr  C10m100AM14_LS417_UAMod2.dvr  C10m100AM20_s809.dvr  C10m100AM20_s809_UAMod2.dvr  C10m150AM14_LS417.dvr  C10m150AM14_LS417_UAMod2.dvr  Compare_2D_Results.m  Run_2D_Tests.bat  S813_15_mod2.dvr
CertTest/UA_Tests/Exp_Results/: Readme.txt
CertTest/UA_Tests/NREL_Results/: 05014051_NACA_UAMod2.out  05014051_NACA_UAMod3.out  05014061_NACA_UAMod2.out  05014061_NACA_UAMod3.out  C10l100AM20_s809_UAMod2.out  C10l100AM20_s809_UAMod3.out  C10m100AM14_LS417_UAMod2.out  C10m100AM14_LS417_UAMod3.out  C10m100AM20_s809_UAMod2.out  C10m100AM20_s809_UAMod3.out  C10m150AM14_LS417_UAMod2.out  C10m150AM14_LS417_UAMod3.out
CertTest/af_files2/: cylinder.ech
Compiling/: makefile_ADdriver  makefile_UAdriver  makefile_UAtest  makefile_WTP
Compiling/Visual Studio 2013/AeroDyn_Driver/: AeroDyn_Driver.vfproj  Registry_tmp.12860  Registry_tmp.13140  Registry_tmp.16908  Registry_tmp.17336  Registry_tmp.2964  Registry_tmp.5412  Registry_tmp.9968  RunRegistry.bat
Compiling/Visual Studio 2013/Console1/: Console1.f90  Console1.vfproj  ReadMe.txt
Compiling/Visual Studio 2013/DBEMT_Test/: DBEMT_Test.vfproj  ReadMe.txt
Compiling/Visual Studio 2013/UnsteadyAeroTest/: UnsteadyAeroTest.sln
Compiling/Visual Studio 2013/UnsteadyAero_Driver/: RunRegistry.bat  UnsteadyAero_Driver.vfproj
Compiling/Visual Studio 2013/WT_Perf/: AeroDyn_Types.f90  AirfoilInfo_Types.f90  BEMT_Types.f90  BEM_Types.f90  ReadMe.txt  RunRegistry.bat  WT_Perf.sln  WT_Perf.vfproj
Documentation/: AeroAcoustics_Changes.txt  AeroDynMesh.docx  AeroDyn_Manual.docx  BEMT Special Cases.txt  Doxyfile  Fast-Level Testing.xlsx  UnsteadyAero Flow2.pptx  WT_Perf_User-guide.docx
Source/: AeroDyn_Driver.f90  AeroDyn_Driver_Registry.txt  AeroDyn_Driver_Subs.f90  AeroDyn_Driver_Types.f90  CreateTypes.bat  WTP_Types.f90  WTP_files.f90  WT_Perf.f90  WT_PerfSubs.f90  WT_Perf_IO.f90
Source/dependencies/: FAST_SourceFiles.txt  updateNWTC_Library.bat  updateNetLib.bat
Source/dependencies/AeroDyn/: AeroDyn.f90  AeroDyn_IO.f90  AeroDyn_Registry.txt  AeroDyn_Types.f90  BladeElement.f90
Source/drivers/: UA_Dvr_Subs.f90  UnsteadyAeroTest.f90  UnsteadyAero_Driver.f90
(+242 files in other folders)
